--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             --neon-gold: #ffd700;
             --neon-green: #39ff14;
             --bg-dark: #050508;
+            --neon-purple: #bc13fe;
+            --neon-white: #ffffff;
         }
 
         body {
@@ -38,6 +40,17 @@
         .neon-text-gold {
             text-shadow: 0 0 10px var(--neon-gold), 0 0 20px var(--neon-gold);
             color: var(--neon-gold);
+        }
+
+        /* New Shop Styles */
+        .neon-text-purple {
+            text-shadow: 0 0 10px var(--neon-purple), 0 0 20px var(--neon-purple);
+            color: #fff;
+        }
+
+        .neon-text-white {
+            text-shadow: 0 0 10px var(--neon-white), 0 0 20px var(--neon-white);
+            color: #fff;
         }
 
         .map-card {
@@ -219,6 +232,32 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SHOP INTRODUCTION SECTION -->
+    <section class="max-w-5xl mx-auto border-t border-gray-900 mt-10">
+        <h2 class="text-4xl font-orbitron text-center mb-16 neon-text-blue uppercase">Giới thiệu cửa hàng (Shop Showcase)</h2>
+        <div class="grid md:grid-cols-2 gap-10">
+            <!-- Unit Permanent Shop -->
+            <div class="p-8 rounded-2xl bg-black/60 border border-purple-500/30 flex flex-col items-center text-center">
+                <div class="text-5xl mb-6">💎</div>
+                <h3 class="text-2xl font-orbitron font-bold neon-text-purple mb-4 uppercase">Unit Permanent Shop</h3>
+                <p class="text-gray-400 leading-relaxed">
+                    Nơi mua những unit đắt đỏ và sở hữu chúng vĩnh viễn trong bộ sưu tập của bạn. Đầu tư một lần, sử dụng mãi mãi!
+                    <br><span class="text-xs italic text-purple-400">(Buy expensive units and own them permanently. Invest once, use forever!)</span>
+                </p>
+            </div>
+
+            <!-- Normal Shop - One Time -->
+            <div class="p-8 rounded-2xl bg-black/60 border border-white/20 flex flex-col items-center text-center">
+                <div class="text-5xl mb-6">📦</div>
+                <h3 class="text-2xl font-orbitron font-bold neon-text-white mb-4 uppercase">Normal Shop - One Time</h3>
+                <p class="text-gray-400 leading-relaxed">
+                    Nơi mua những unit với giá rẻ và chỉ sử dụng được 1 lần, mục đích nhằm hỗ trợ người chơi vượt qua các trận đấu khó khăn.
+                    <br><span class="text-xs italic text-gray-500">(Buy cheap units for one-time use to support you in difficult matches.)</span>
+                </p>
             </div>
         </div>
     </section>
