--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
                             <span class="mr-2 text-yellow-500">•</span>
                             <span>Hồi sinh trụ tối đa 2 lần mỗi trận</span>
                         </li>
+                        <!-- Added benefit as requested -->
+                        <li class="flex items-start">
+                            <span class="mr-2 text-yellow-500">•</span>
+                            <span>Giảm 20% khi mua unit trong trận <br><span class="text-xs italic text-yellow-600/70">(20% discount on in-game unit purchases)</span></span>
+                        </li>
                     </ul>
                 </div>
             </div>
