--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- Weapons Library -->
     <section class="max-w-6xl mx-auto py-10">
         <h2 class="text-2xl font-orbitron text-center mb-12 text-gray-500 uppercase tracking-[0.5em]">Hệ thống vũ khí (Arsenal)</h2>
-        <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-7 gap-4 px-4">
+        <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-8 gap-4 px-4">
             <!-- Gun -->
             <div class="weapon-box text-center">
                 <div class="text-4xl mb-3">🔫</div>
@@ -150,10 +150,16 @@
                 <div class="text-4xl mb-3">🚀</div>
                 <p class="text-yellow-400 font-bold text-sm uppercase">Rocket</p>
             </div>
-            <!-- Gun Rifle -->
+            <!-- Wall (Updated - No New Badge) -->
             <div class="weapon-box text-center">
+                <div class="text-4xl mb-3">🚧</div>
+                <p class="text-orange-400 font-bold text-sm uppercase">Wall</p>
+            </div>
+            <!-- Mini Gun (Updated from Gun Rifle) -->
+            <div class="weapon-box text-center border-blue-400/30">
+                <div class="badge-new">NEW</div>
                 <div class="text-4xl mb-3">🔫v2</div>
-                <p class="text-blue-400 font-bold text-sm uppercase">Gun Rifle</p>
+                <p class="text-blue-400 font-bold text-sm uppercase">Mini Gun</p>
             </div>
             
             <!-- NEW UPDATED WEAPONS -->
